CB-0056 | server: user model extension
